--- a/style.css
+++ b/style.css
@@ -26,29 +26,7 @@ float: right;
 }
 
 
-.ficha{
-    margin: 25px auto;
-    background: white;
-    padding: 0px;
-    height: 490px;
-    width: 450px;
-}
 
-
-.titulo-ficha{
-    padding-top:1px;
-    padding-left: 10px;
-    display: inline;
-    height: 100px;
-    width: 300px;
-    float: left;
-}
-
-.enumeracion-ficha{
-    color: gray;
-    text-align: right;
-    float: right;
-}
 
 
 .post{
@@ -161,3 +139,66 @@ float: right;
 }
 
 
+
+
+
+
+body{
+    background:lightgray;
+    margin: auto;
+    padding-top: 0%;
+}
+
+.encabezado{
+    height: auto;
+    padding:1%;
+    margin:auto;
+    background: white;
+}
+
+
+.ficha{
+    margin: 25px auto;
+    background: white;
+    padding: 0px;
+    height: 490px;
+    width: 450px;
+}
+
+
+.titulo-ficha{
+    padding-top:1px;
+    padding-left: 10px;
+    display: inline;
+    height: 100px;
+    width: 300px;
+    float: left;
+}
+
+.enumeracion-ficha{
+    color: gray;
+    text-align: right;
+    float: right;
+}
+
+.icon-heart{
+    padding-top:1px;
+    padding-left: 10px;
+    display: inline;
+    height: 100px;
+    width: 300px;
+    float: left;
+}
+
+.comment{
+    padding-top:1px;
+    display: inline;
+    float: left;
+    padding-right: 30px;
+}
+
+.icon-menu{
+    color: gray;
+    text-align: right;
+    float: right;
+}
